--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
         stage('Complete') {
             steps {
                 echo 'completed this simple java maven app!!!'
-                echo 'This looks pretty cool!'
+                echo 'This looks very pretty cool!'
             }
         }
         
